# circle-ci-mysubmodule

./: MySubmodule.hs  mysubmodule.cabal
